hphp/hack/test/enum_class/typing/access_variant_writeprops.bad.php.exp
File "access_variant_writeprops.bad.php", line 9, characters 3-13:
Accessing an enum class constant requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "access_variant_writeprops.bad.php", line 8, characters 33-34:
  The local (enclosing) context provides the capability set {}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "access_variant_writeprops.bad.php", line 10, characters 3-9:
Accessing an enum class constant requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "access_variant_writeprops.bad.php", line 8, characters 33-34:
  The local (enclosing) context provides the capability set {}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
