hphp/hack/test/enum_class/typing/access_variant_writeprops.bad.php
<?hh

class MyClass {}
enum class MyEnum: MyClass {
  MyClass AAA = new MyClass();
}

function f(classname<MyEnum> $m)[]: void {
  MyEnum::AAA;
  $m::AAA;
}
